--- a/js/src/modules/style.css
+++ b/js/src/modules/style.css
@@ -93,11 +93,58 @@ html, body {
   padding-left: 1vw;
 }
 .isHidden {
-  display: none;
+  display: none!important;
 }
 .toggle-apps {
   position: absolute;
   top: 0;
   right: 0;
   opacity: .3;
+}
+
+.photo-app {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color:#FFF;
+}
+
+.main-carousel {
+  width: 100%;
+  height: 100%;
+}
+.flickity-viewport {
+  height: 100%!important;
+}
+.carousel-cell {
+  width: 100%;
+  height: 100%;
+  border: 1px solid red;
+  background-size: cover!important;
+  background-position: center!important;
+  background-repeat: no-repeat!important;
+}
+.auto-play {
+  cursor: pointer;
+  position: absolute;
+  top: 0; 
+  width: 2rem;
+  height: 2rem;
+  z-index: 10;
+  display: flex;
+  color:#FFF;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #FFF;
+  border-radius: 50%;
+  opacity: .5;
 }
