--- a/css/main.css
+++ b/css/main.css
@@ -2,156 +2,6 @@
 https://flickity.metafizzy.co
 ---------------------------------------------- */
 .flickity-enabled{position:relative}.flickity-enabled:focus{outline:0}.flickity-viewport{overflow:hidden;position:relative;height:100%}.flickity-slider{position:absolute;width:100%;height:100%}.flickity-enabled.is-draggable{-webkit-tap-highlight-color:transparent;tap-highlight-color:transparent;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.flickity-enabled.is-draggable .flickity-viewport{cursor:move;cursor:-webkit-grab;cursor:grab}.flickity-enabled.is-draggable .flickity-viewport.is-pointer-down{cursor:-webkit-grabbing;cursor:grabbing}.flickity-button{position:absolute;background:hsla(0,0%,100%,.75);border:none;color:#333}.flickity-button:hover{background:#fff;cursor:pointer}.flickity-button:focus{outline:0;box-shadow:0 0 0 5px #19f}.flickity-button:active{opacity:.6}.flickity-button:disabled{opacity:.3;cursor:auto;pointer-events:none}.flickity-button-icon{fill:#333}.flickity-prev-next-button{top:50%;width:44px;height:44px;border-radius:50%;transform:translateY(-50%)}.flickity-prev-next-button.previous{left:10px}.flickity-prev-next-button.next{right:10px}.flickity-rtl .flickity-prev-next-button.previous{left:auto;right:10px}.flickity-rtl .flickity-prev-next-button.next{right:auto;left:10px}.flickity-prev-next-button .flickity-button-icon{position:absolute;left:20%;top:20%;width:60%;height:60%}.flickity-page-dots{position:absolute;width:100%;bottom:-25px;padding:0;margin:0;list-style:none;text-align:center;line-height:1}.flickity-rtl .flickity-page-dots{direction:rtl}.flickity-page-dots .dot{display:inline-block;width:10px;height:10px;margin:0 8px;background:#333;border-radius:50%;opacity:.25;cursor:pointer}.flickity-page-dots .dot.is-selected{opacity:1}
-html, body {
-  position: relative;
-  display: flex;
-  min-width: 100vw;
-  min-height: 100vh;
-  padding: 0;
-  margin: 0;
-  font-family: 'Fira Mono', monospace;
-  background: #000;
-  overflow: hidden;
-}
-.photo-app {
-  width: 100vw;
-  height: 100vh;
-  background: #999;
-}
-@-webkit-keyframes bg {
-  0% { background-color: #00A2D9; }
-  33% { background-color: #B7295A; }
-  66% { background-color: #7AB800; }
-  100% { background-color: #00A2D9; }
-}
-@keyframes bg {
-  0% { background-color: #00A2D9; }
-  33% { background-color: #B7295A; }
-  66% { background-color: #7AB800; }
-  100% { background-color: #00A2D9; }
-}
-* {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  margin: 0;
-}
-
-.timer-container {
-  position: relative;
-  width: 100vw;
-  min-height: 100vh;
-  pointer-events: none;
-}
-
-.progress {
-  display: inline-block;
-  height: 100vh;
-  -webkit-animation: bg 21s infinite;
-  animation: bg 21s infinite;
-  width: 0px;
-  pointer-events: none;
-  transition: opacity 2s, width 1s linear;
-}
-.message {
-  font-size: calc(5vw + 3px);
-  pointer-events: none;
-}
-.timer_area {
-  font-size: calc(15vw + 5px);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color:#FFF;
-}
-.timer {
-  pointer-events: none;
-}
-.icon {
-  width: 5vw;
-  height: 5vw;
-}
-.buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.btn {
-  display: flex;
-  align-items: center;
-  opacity: .3;
-  cursor: pointer;
-}
-.halt {
-  margin-left: 8vw;
-}
-.btn .txt {
-  font-size: calc(2vw + 5px);
-  padding-left: 1vw;
-}
-.isHidden {
-  display: none!important;
-}
-.toggle-apps {
-  position: absolute;
-  top: 0;
-  right: 0;
-  opacity: .3;
-}
-
-.photo-app {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  color:#FFF;
-}
-
-.main-carousel {
-  width: 100%;
-  height: 100%;
-}
-.flickity-viewport {
-  height: 100%!important;
-}
-.carousel-cell {
-  width: 100%;
-  height: 100%;
-  border: 1px solid red;
-  background-size: cover!important;
-  background-position: center!important;
-  background-repeat: no-repeat!important;
-}
-.auto-play {
-  cursor: pointer;
-  position: absolute;
-  top: 0; 
-  width: 2rem;
-  height: 2rem;
-  z-index: 10;
-  display: flex;
-  color:#FFF;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #FFF;
-  border-radius: 50%;
-  opacity: .5;
-}
-
+body,html{position:relative;display:-webkit-box;display:-ms-flexbox;display:flex;min-width:100vw;min-height:100vh;padding:0;margin:0;font-family:Fira Mono,monospace;background:#000;overflow:hidden}.photo-app{width:100vw;height:100vh;background:#999}@-webkit-keyframes bg{0%{background-color:#00a2d9}33%{background-color:#b7295a}66%{background-color:#7ab800}to{background-color:#00a2d9}}@keyframes bg{0%{background-color:#00a2d9}33%{background-color:#b7295a}66%{background-color:#7ab800}to{background-color:#00a2d9}}*{border:0;padding:0;-webkit-box-sizing:border-box;box-sizing:border-box;margin:0}.timer-container{position:relative;width:100vw;min-height:100vh;pointer-events:none}.progress{display:inline-block;height:100vh;-webkit-animation:bg 21s infinite;animation:bg 21s infinite;width:0;-webkit-transition:opacity 2s,width 1s linear;transition:opacity 2s,width 1s linear}.message,.progress{pointer-events:none}.message{font-size:calc(5vw + 3px)}.timer_area{font-size:calc(15vw + 5px);position:absolute;top:0;left:0;width:100vw;height:100vh;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:#fff}.timer{pointer-events:none}.icon{width:5vw;height:5vw}.buttons{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.btn,.buttons{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.btn{opacity:.3;cursor:pointer}.halt{margin-left:8vw}.btn .txt{font-size:calc(2vw + 5px);padding-left:1vw}.isHidden{display:none!important}.toggle-apps{position:absolute;top:0;right:0;opacity:.3}.photo-app{position:fixed;top:0;left:0;right:0;bottom:0;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:#fff}.main-carousel,.photo-app{width:100%;height:100%}.flickity-viewport{height:100%!important}.carousel-cell{width:100%;height:100%;border:1px solid red;background-size:cover!important;background-position:50%!important;background-repeat:no-repeat!important}.auto-play{cursor:pointer;position:absolute;top:0;width:2rem;height:2rem;z-index:10;display:-webkit-box;display:-ms-flexbox;display:flex;color:#fff;font-size:1.5rem;line-height:2rem;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;border:1px solid #fff;border-radius:50%;opacity:.5}
 
 /*# sourceMappingURL=main.css.map*/
