--- a/js/src/modules/style.scss
+++ b/js/src/modules/style.scss
@@ -76,7 +76,7 @@ html, body {
 }
 .timer-container {
   position: relative;
-  width: 100%;
+  width: 100vw;
   min-height: 100%;
   pointer-events: none;
   background: black;
@@ -84,7 +84,7 @@ html, body {
 
 .progress {
   display: inline-block;
-  height: 100%;
+  height: 100vh;
   animation: bg 21s infinite;
   width: 0px;
   pointer-events: none;
