--- a/js/src/modules/style.scss
+++ b/js/src/modules/style.scss
@@ -216,3 +216,13 @@ html, body {
     display: none;
   }
 }
+.shutdown {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+  background: yellow;
+  z-index: 999;
+  opacity: 0.2;
+}
